--- a/contact.html
+++ b/contact.html
@@ -57,6 +57,9 @@
                         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="upcoming-events.html">Events</a></li>
                         <li class="nav-item"><a class="nav-link" href="onboarding-guide.html">Onboarding Guide</a></li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="slides.html">Slides</a>
+                    </li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="contact.html">Contact</a></li>
                     </ul>
                 </div>
