--- a/upcoming-events.html
+++ b/upcoming-events.html
@@ -243,6 +243,9 @@
                         <a class="nav-link" href="onboarding-guide.html">Onboarding Guide</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="slides.html">Slides</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
