--- a/about.html
+++ b/about.html
@@ -154,7 +154,7 @@
                             <img class="card-img-top" src="https://github.com/ba-00001/imagesforWEB-1/blob/main/treasurer-assistant.jpg?raw=true" alt="Yana Judah - Treasurer Assistant" />
                             <div class="card-body">
                                 <h5 class="fw-bold">Yana Judah</h5>
-                                <p class="mb-0">Treasurer Assistant</p>
+                                <p class="mb-0">Support team</p>
                                 <p class="mt-3">Rising Junior @Florida International University majoring in Computer Science. Yana supports financial planning and event organization for Code Crunch.</p>
                                 <a href="https://www.linkedin.com/in/yana-j/" target="_blank" class="linkedin-icon">
                                     <i class="bi bi-linkedin"></i> LinkedIn
@@ -168,7 +168,7 @@
                             <img class="card-img-top" src="https://github.com/ba-00001/imagesforWEB-1/blob/main/rsoc-assistant.jpg?raw=true" alt="Jennifer Parra - RSOC Assistant" />
                             <div class="card-body">
                                 <h5 class="fw-bold">Jennifer Parra</h5>
-                                <p class="mb-0">RSOC Assistant</p>
+                                <p class="mb-0">Support team</p>
                                 <p class="mt-3">First Generation Computer Science student at Florida International University, with a minor in Criminal Justice. Jennifer helps with organizing club events and engaging with RSOC to expand Code Crunch's impact.</p>
                                 <a href="https://www.linkedin.com/in/jennifer-d-parra/" target="_blank" class="linkedin-icon">
                                     <i class="bi bi-linkedin"></i> LinkedIn
