--- a/slides copy 1.html
+++ b/slides copy 1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code Crunch Presentation</title>
+    <title>Login - Code Crunch Presentation</title>
     <!-- Bootstrap icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap) -->
@@ -29,6 +29,13 @@
         .login-container h2 {
             margin-bottom: 20px;
         }
+        .login-container input {
+            margin-bottom: 10px;
+            padding: 10px;
+            width: 80%;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
         .login-container button {
             padding: 10px 20px;
             background-color: #5072a7;
@@ -39,6 +46,10 @@
         }
         .login-container button:hover {
             background-color: #3b5998;
+        }
+        .error-message {
+            color: red;
+            margin-top: 10px;
         }
         /* Navbar styles */
         .navbar {
@@ -106,16 +117,26 @@
         </div>
     </nav>
 
-    <!-- Presentation Access Button -->
+    <!-- Login Form -->
     <div class="login-container">
-        <h2>Access Code Crunch Presentation</h2>
-        <button onclick="redirectToSlides()">Click Here to View</button>
+        <h2>Code Crunch Login</h2>
+        <input type="text" id="username" placeholder="Username" required><br>
+        <input type="password" id="password" placeholder="Password" required><br>
+        <button onclick="obfuscatedLogin()">Login</button>
+        <p id="error-message" class="error-message"></p>
     </div>
 
     <script>
-        // Redirect to the Google Slides link when the button is clicked
-        function redirectToSlides() {
-            window.location.href = 'https://drive.google.com/drive/folders/1FODmR1gCHxdGM10rZ7CfjRezXeYA2VVq?usp=sharing';
+        // Obfuscated Login Function
+        function obfuscatedLogin() {
+            var _0x1a2b = document.getElementById('username').value;
+            var _0x2b3c = document.getElementById('password').value;
+
+            if (_0x1a2b === 'codecrunch' && _0x2b3c === 'amilcargoat') {
+                window.location.href = 'https://docs.google.com/presentation/d/11DnMu8KKvajx0TpfqNeLk5KUZk9AR7w0/preview?rm=minimal';
+            } else {
+                document.getElementById('error-message').textContent = 'Invalid username or password.';
+            }
         }
     </script>
 
