--- a/slides copy 2.html
+++ b/slides copy 2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code Crunch Presentation</title>
+    <title>Dynamic Google Slides Selector</title>
     <!-- Bootstrap icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap) -->
@@ -17,30 +17,24 @@
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
         }
-        .login-container {
-            text-align: center;
-            background-color: white;
+        .container {
             padding: 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-            margin: 100px auto;
-            width: 300px;
+            text-align: center;
         }
-        .login-container h2 {
-            margin-bottom: 20px;
+        .presentation-container {
+            margin-top: 20px;
+            width: 80%;
+            height: 600px;
+            margin-left: auto;
+            margin-right: auto;
+            border: 1px solid #ddd;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
         }
-        .login-container button {
-            padding: 10px 20px;
-            background-color: #5072a7;
-            color: white;
+        .presentation-container iframe {
+            width: 100%;
+            height: 100%;
             border: none;
-            border-radius: 4px;
-            cursor: pointer;
         }
-        .login-container button:hover {
-            background-color: #3b5998;
-        }
-        /* Navbar styles */
         .navbar {
             position: sticky;
             top: 0;
@@ -90,13 +84,13 @@
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="slides.html">Slides</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="upcoming-events.html">Events</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="onboarding-guide.html">Onboarding Guide</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="slides.html">Slides</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
@@ -106,16 +100,31 @@
         </div>
     </nav>
 
-    <!-- Presentation Access Button -->
-    <div class="login-container">
-        <h2>Access Code Crunch Presentation</h2>
-        <button onclick="redirectToSlides()">Click Here to View</button>
+    <div class="container">
+        <h2>Select a Presentation to View</h2>
+        <select id="presentationSelector" onchange="updatePresentation()">
+            <!-- Replace with your actual Google Slides presentation IDs -->
+            <option value="" disabled selected>Select a presentation</option>
+            <option value="11DnMu8KKvajx0TpfqNeLk5KUZk9AR7w0">Google Slides Presentation 1</option>
+            <option value="your-slide-2-id">Google Slides Presentation 2</option>
+            <option value="your-slide-3-id">Google Slides Presentation 3</option>
+        </select>
+
+        <div class="presentation-container" id="presentationContainer">
+            <!-- Google Slides presentation will be embedded here -->
+        </div>
     </div>
 
     <script>
-        // Redirect to the Google Slides link when the button is clicked
-        function redirectToSlides() {
-            window.location.href = 'https://drive.google.com/drive/folders/1FODmR1gCHxdGM10rZ7CfjRezXeYA2VVq?usp=sharing';
+        function updatePresentation() {
+            // Get the selected presentation ID
+            var presentationId = document.getElementById("presentationSelector").value;
+
+            // Construct the Google Slides embed URL
+            var embedUrl = `https://docs.google.com/presentation/d/${presentationId}/preview?rm=minimal`;
+
+            // Update the iframe with the new presentation
+            document.getElementById("presentationContainer").innerHTML = `<iframe src="${embedUrl}" allowfullscreen></iframe>`;
         }
     </script>
 
