--- a/index.html
+++ b/index.html
@@ -164,12 +164,13 @@
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <h2 class="fs-4 fw-bold">Attendance Form</h2>
-                                <p class="mb-0">Mark your attendance for meetings and events through our online form.</p>
+                                <p class="mb-0">Mark your attendance for meetings and events by following the steps provided in our <strong>Onboarding Guide</strong>.</p>
                                 <p class="mt-3"><strong>Note:</strong> FIU email authentication is required to submit attendance.</p>
-                                <a class="btn btn-primary btn-lg mt-3" href="https://forms.office.com/r/xx2aRuEHDF" target="_blank">Mark Attendance</a>
+                                <a class="btn btn-primary btn-lg mt-3" href="onboarding-guide.html" target="_blank">Go to Onboarding Guide</a>
                             </div>
                         </div>
                     </div>
+
 
                     <!-- Join Discord Card -->
                     <div class="col-lg-6 col-xxl-4 mb-5">
