--- a/index.html
+++ b/index.html
@@ -88,9 +88,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="onboarding-guide.html">Onboarding Guide</a>
                 </li>
-                <li class="nav-item">
-                     <a class="nav-link" href="slides.html">Slides</a>
-                </li>
+
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
@@ -146,18 +144,7 @@
                         </div>
                     </div>
 
-                    <!-- Meeting RSVP Card -->
-                    <div class="col-lg-6 col-xxl-4 mb-5">
-                        <div class="card bg-light border-0 h-100">
-                            <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                                <h2 class="fs-4 fw-bold">Meeting RSVP</h2>
-                                <p class="mb-0">Let us know you're attending our upcoming <strong>special in-person events</strong> like panelist discussions, HackRank sessions with software engineers, or special events featuring goodies and lunch.</p>
-                                <p class="mt-3"><strong>Note:</strong> FIU email authentication is required to complete the RSVP.</p>
-                                <p class="mt-3"><strong>Reminder:</strong> Meeting RSVP must be submitted <strong>24 hours before the event</strong> takes place. If not, you might not be able to secure your spot.</p>
-                                <a class="btn btn-primary btn-lg mt-3" href="https://forms.office.com/r/bxas9Btdta" target="_blank">RSVP Now</a>
-                            </div>
-                        </div>
-                    </div>
+
 
                     <!-- Attendance Form Card -->
                     <div class="col-lg-6 col-xxl-4 mb-5">
@@ -171,6 +158,30 @@
                         </div>
                     </div>
 
+                    <!-- Feedback Form Card -->
+                    <div class="col-lg-6 col-xxl-4 mb-5">
+                        <div class="card bg-light border-0 h-100">
+                            <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
+                                <h2 class="fs-4 fw-bold">Feedback Form</h2>
+                                <p class="mb-0">We value your feedback! Share your thoughts on our events and suggest improvements.</p>
+                                <p class="mt-3"><strong>Note:</strong> FIU email authentication is required to submit feedback.</p>
+                                <a class="btn btn-primary btn-lg mt-3" href="https://forms.office.com/r/H5vtXACK6j" target="_blank">Give Feedback</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Meeting RSVP Card -->
+                    <div class="col-lg-6 col-xxl-4 mb-5">
+                        <div class="card bg-light border-0 h-100">
+                            <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
+                                <h2 class="fs-4 fw-bold">Meeting RSVP</h2>
+                                <p class="mb-0">Let us know you're attending our upcoming <strong>special in-person events</strong> like panelist discussions, HackRank sessions with software engineers, or special events featuring goodies and lunch.</p>
+                                <p class="mt-3"><strong>Note:</strong> FIU email authentication is required to complete the RSVP.</p>
+                                <p class="mt-3"><strong>Reminder:</strong> Meeting RSVP must be submitted <strong>24 hours before the event</strong> takes place. If not, you might not be able to secure your spot.</p>
+                                <a class="btn btn-primary btn-lg mt-3" href="https://forms.office.com/r/bxas9Btdta" target="_blank">RSVP Now</a>
+                            </div>
+                        </div>
+                    </div>
 
                     <!-- Join Discord Card -->
                     <div class="col-lg-6 col-xxl-4 mb-5">
