--- a/index.html
+++ b/index.html
@@ -144,6 +144,17 @@
                         </div>
                     </div>
 
+                    <!-- Upcoming Events Card -->
+                    <div class="col-lg-6 col-xxl-4 mb-5">
+                        <div class="card bg-light border-0 h-100">
+                            <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
+                                <h2 class="fs-4 fw-bold">Upcoming Events</h2>
+                                <p class="mb-0">Check out and register for our upcoming events on Luma by clicking the link below.</p>
+                                <p class="mt-3"><strong>Stay tuned for exciting workshops, club meetings, and coding sessions!</strong></p>
+                                <a class="btn btn-primary btn-lg mt-3" href="https://lu.ma/CODECRUNCH" target="_blank">View and Register for Events</a>
+                            </div>
+                        </div>
+                    </div>
 
 
                     <!-- Attendance Form Card -->
